With Delete function implemented

--- a/app/src/main/res/layout/activity_do_add_color.xml
+++ b/app/src/main/res/layout/activity_do_add_color.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        android:text="Enter new color:"
+        android:text="Enter color:"
         android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="24sp"
