Currently finished product

--- a/app/src/main/res/layout/activity_add_part.xml
+++ b/app/src/main/res/layout/activity_add_part.xml
@@ -44,7 +44,7 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Type:"
+            android:text="Brick Type:"
             android:textColor="@android:color/black"
             android:textSize="24sp" />
 
@@ -73,7 +73,7 @@
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Area"
+            android:text="Brick Area:"
             android:textColor="@android:color/black"
             android:textSize="24sp" />
 
